# PlanReview

./: .gitignore  README.md  TRAINING_DATA.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_app.sh  build_dmg.sh  fetch_manufacturer_corpus.py  import_signing_identity.sh  notarize_dmg.sh  release_github.sh  run_public_regression.py  train_component_model.py
src/planreview/: app.py  config.py  database.py  desktop.py  main.py  models.py  routes.py  schemas.py
src/planreview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/planreview/data/: manufacturer_corpus.json  standards_seed.json  symbol_ontology.json
src/planreview/services/: __init__.py  automation.py  catalog.py  catalog_seed.py  component_model.py  document_analysis.py  documents.py  export.py  graph.py  jobs.py  manufacturer_corpus.py  ontology.py  review.py  rules.py  semantic_model.py  spec_parser.py
src/planreview/static/: app.css  app.js
src/planreview/templates/: index.html
tests/: conftest.py  test_app_flow.py  test_catalog.py  test_component_model.py  test_document_analysis.py  test_public_regression.py  test_rule_feedback.py  test_semantic_analysis.py  test_semantic_stack.py
